tests/reject/classMissingSuperInitWithIf.emojic
🐇 🐟 🍇
  🔑 🐈 🆕 🍇

  🍉

  🐖 🙋 🍇
    😀 🔤I’m a fish.🔤
  🍉
🍉

🐇 🐡 🐟 🍇
  🔑 🐈 🆕 🍇
    🍊 😛 32 32 🍇
      🐐 🆕
    🍉
  🍉

  ✒️  🐖 🙋 🍇
    😀 🔤I’m a blowfish.🔤
  🍉
🍉

🏁 🍇
  🍦 fish 🔷🐟🆕
  🙋 fish
🍉
